# money_envelope

./: CMakeLists.txt  README.md  money_to_cases.sln  алгоритм.txt
lib/: CMakeLists.txt  lib.vcproj  money_to_cases.cpp  money_to_cases.h
money_to_cases/: 1.txt  2.txt  3.txt  4.txt  CMakeLists.txt  main.cpp  money_to_cases.vcproj  out.txt  out2020.txt  out_fast.txt  out_fast2.txt  ряды.txt
slon_version/: CMakeLists.txt  main.cpp  slon_version.vcproj
test/: 4.txt  CMakeLists.txt  test.cpp  test.vcproj  test1.txt  test11.txt  test15.txt  test16.txt  test17.txt  test2.txt  test3.txt  test4.txt  test5.txt  test6.txt
utils/: CMakeLists.txt  print.cpp  print.h  timer.cpp  timer.h  utils.vcproj
